--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,86 @@
+/* Our own */
 
-body {
-    /* https://coolors.co/generate and click export -> scss to get the colors to copy and paste below*/
-    /* --color1: hsla(349, 69%, 76%, 1);
+html {
+    border: orange 2px solid;
+}
+
+header {
+    border: green 2px solid;
+}
+
+h1 {
+    border: blue 2px solid;
+}
+
+main {
+    border: red 2px solid ;
+}
+
+article {
+    border: purple 2px solid;
+}
+
+section {
+    border: mediumspringgreen 2px solid;
+}
+
+#recipe {
+    border: hotpink 2px solid;
+}
+
+#share {
+    border:lime 2px solid;
+}
+
+* {
+    background-color:lightsteelblue
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* body {
+    https://coolors.co/generate and click export -> scss to get the colors to copy and paste below
+    --color1: hsla(349, 69%, 76%, 1);
     --color2: hsla(207, 67%, 44%, 1);
     --color3: hsla(200, 61%, 56%, 1);
     --color4: hsla(187, 41%, 94%, 1);
-    --color5: hsla(170, 28%, 95%, 1); */
+    --color5: hsla(170, 28%, 95%, 1);
 
-    /* --color1: hsla(45, 86%, 83%, 1);
+    --color1: hsla(45, 86%, 83%, 1);
     --color2: hsla(135, 65%, 98%, 1);
     --color3: hsla(315, 37%, 86%, 1);
     --color4: hsla(45, 73%, 98%, 1);
-    --color5: hsla(224, 40%, 79%, 1); */
+    --color5: hsla(224, 40%, 79%, 1);
     
     --header-height: 80px;
     --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
@@ -110,4 +179,4 @@ footer {
         transform: rotate3d(10, 10, 10, 50deg) scale(1);
     }
 
-  }
+  } */
