--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,13 @@
 /* Our own */
-* {
-    background-color:lightsteelblue;
-    
-}
 
 
- body {
+body {
     width: 1000px;
     display: grid;
     grid-template-rows: 100px 1fr 100px;
     margin: auto;
 
- }
+}
 
 header {
 
@@ -23,10 +19,20 @@ header {
     border: green 2px solid;
     font-family: 'Yellowtail', cursive;
     font-size: 2rem;
-    vertical-align: top;
+    
+}
+e
+#prince {
+    text-align: right;
+    display:inline-block;
+    content:"";
 }
 
-
+#subheading {
+    font-size: 1rem;
+    color: rgb(121, 120, 120);
+    font-family: 'Courier New', Courier, monospace;
+}
 #social {
     text-align: right;
     display:inline-block;
@@ -35,7 +41,15 @@ header {
 }
 
 h1 {
+
+    display:flex; 
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-family: 'Anton', sans-serif;
     border: blue 2px solid;
+    font-size: 2.7rem;
+
 }
 
 main {
@@ -44,14 +58,33 @@ main {
 
 article {
     border: purple 2px solid;
+    text-align: center;
+    
 }
+
 
 section {
     border: mediumspringgreen 2px solid;
+    font-size: 1.5rem;
+    font-family: 'Newsreader', serif;
+    
 }
 
-#recipe {
+li {
+    background: rgba(255, 255, 255, 0.1);
     border: hotpink 2px solid;
+    font-size: 1.7rem;
+    padding-left: 40px;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+
+.recipe {
+    background-image: url('list-bg.png');
+    height: 305px;
+    width: 899px;
+    columns: 300px 2;
 }
 
 #share {
