--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,6 @@ header {
     justify-content: center;
     flex-wrap: wrap;
 
-    border: green 2px solid;
     font-family: 'Yellowtail', cursive;
     font-size: 2rem;
     
@@ -47,24 +46,20 @@ h1 {
     justify-content: center;
     flex-wrap: wrap;
     font-family: 'Anton', sans-serif;
-    border: blue 2px solid;
     font-size: 2.7rem;
 
 }
 
 main {
-    border: red 2px solid ;
 }
 
 article {
-    border: purple 2px solid;
     text-align: center;
     
 }
 
 
 section {
-    border: mediumspringgreen 2px solid;
     font-size: 1.5rem;
     font-family: 'Newsreader', serif;
     
@@ -72,7 +67,6 @@ section {
 
 li {
     background: rgba(255, 255, 255, 0.1);
-    border: hotpink 2px solid;
     font-size: 1.7rem;
     padding-left: 40px;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -87,8 +81,8 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     columns: 300px 2;
 }
 
-#share {
-    border:lime 2px solid;
+#share {: 100px 3;
+   
 }
 
 #blog {
@@ -96,9 +90,18 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-family: 'Titillium Web', sans-serif;
 }
 
+#share-center {
+    text-align: center;
+}
+
+#name-image {
+    text-align: left;
+}
 
 
-
+footer {
+    text-align: center;
+}
 
 
 
@@ -169,8 +172,7 @@ section {
     padding-top: var(--gutter);
     padding-bottom: var(--gutter);
     margin-top: var(--gutter);
-    margin-bottom: var(--gutter);
-    border: solid 2px var(--color1);
+    margin-bottom: var(--gutter);color1);
 }
 
 header {
